1.achieve qr code 2. add vote num set and upper bound auto judge 3. acheive anonymity selection 4. ps if you want run app with your ip address please change setting.py ALLOWED_HOSTS = ['10.20.111.242'] to your ip address 5. add share.html page

--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -285,6 +285,7 @@
 </head>
 
 <body>
+
 <div class="container">
     <div class="container mycontainer">
         <div class="row adjustsize" >
@@ -297,7 +298,7 @@
                 <div class="col-sm-6 col-md-4 col-lg-3 mt-4" style="float: left">
                     <div  class="card card-inverse card-info">
                         <div class="cover">
-                            <img class="card-img-top" src="/static/img/2.png" onerror="this.src='/static/img/2.png'">
+                            <img class="card-img-top" src="media/{{ result.vote.vote_img }}" onerror="this.src='/static/img/2.png'">
                         </div>
                         <div class="card-block">
 
