--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
     {#    以下三行用于禁止缓存#}
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,9 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
-{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"#}
-{#            integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"#}
-{#            crossorigin="anonymous"></script>#}
+    {#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"#}
+    {#            integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"#}
+    {#            crossorigin="anonymous"></script>#}
     <script src="/static/js/jsrsasign-all-min.js"></script>
     <script src="/static/js/encryption.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
@@ -30,32 +30,34 @@
     <link rel="stylesheet" href="/static/skin/default.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>
     <script src="/static/js/jquery-1.10.2.min.js"></script>
-{#        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
+    {#        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
 
     {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">#}
-
 
 
     <!------ Include the above in your HEAD tag ---------->
 
     <style type="text/css">
 
-        .mr-3{
+        .mr-3 {
             color: r;
-            margin-right: 1rem!important;
-        }
-        .media-body{
-            flex: 1;
-        }
-        .mt-0{
-            margin-top: 0!important;
+            margin-right: 1rem !important;
         }
 
-        .middle{
+        .media-body {
+            flex: 1;
+        }
+
+        .mt-0 {
+            margin-top: 0 !important;
+        }
+
+        .middle {
             margin-right: auto;
             margin-left: auto;
             width: 256px;
         }
+
         body {
             color: #fff;
             background: #65B0A7;
@@ -66,8 +68,8 @@
             font-size: 14px;
         }
 
-        .float-right{
-            margin-right:-30px;
+        .float-right {
+            margin-right: -30px;
         }
 
         h5 {
@@ -100,7 +102,6 @@
             border-top: 1px solid rgba(34, 36, 38, .1);
             box-shadow: none;
         }
-
 
         .card-inverse .btn {
             border: 1px solid rgba(0, 0, 0, .05);
@@ -193,7 +194,7 @@
             color: #4c565e;
         }
 
-        .smallerfont{
+        .smallerfont {
             font-size: 22px;
             font-weight: 600;
         }
@@ -246,73 +247,144 @@
             float: left;
             margin-right: 3px;
         }
+
         .adjustsize {
             padding-left: 40%;
         }
-        .adjustsize2{
+
+        .adjustsize2 {
             margin-left: 40%;
         }
 
         @media (max-width: 767px) {
 
-
-            .media-heading{
+            .media-heading {
                 font-size: 10px;
             }
 
-            .progress button{
+            .progress button {
                 width: 20%;
             }
 
             .adjustsize {
                 padding-left: 30%;
             }
-            .myfont{
+
+            .myfont {
                 font-size: 32px;
                 line-height: 36px;
             }
-            .smallerfont{
+
+            .smallerfont {
                 font-size: 22px;
                 font-weight: 600;
             }
-            .float-right{
-                margin-right:0px;
+
+            .float-right {
+                margin-right: 0px;
             }
-            .card{
+
+            .card {
                 margin-top: 10px;
             }
-            .mycontainer{
+
+            .mycontainer {
                 margin-top: 20px;
                 padding-left: 20px;
                 padding-right: 20px;
                 padding-bottom: 10px;
             }
-            .col-lg-3{
+
+            .col-lg-3 {
                 width: 50%;
                 padding-right: 7px;
                 padding-left: 7px;
             }
+
             .card-title {
                 font-size: 0.85em;
                 margin-bottom: 5px;
             }
+
             .card-text {
                 font-size: 10px;
                 margin-top: 0em;
                 height: 36px;
                 line-height: 12px;
             }
+
             .cover {
                 height: 100px;
             }
-            .adjustsize2{
+
+            .adjustsize2 {
                 margin-left: 35%;
             }
-            .smallermargin{
+
+            .smallermargin {
                 margin-top: 0;
             }
 
+        }
 
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        /* Hide default HTML checkbox */
+        .switch input {
+            display: none;
+        }
+
+        /* The slider */
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
         }
 
     </style>
@@ -327,28 +399,41 @@
         <div class="row smallermargin" style="color: #000;">
             <div class="form-title-row">
                 <a><h1 style="float: left;" class="myfont">{{ vote.vote_name }}</h1></a>
-                <i data-toggle="modal" data-target="#exampleModal" class="fa fa-share-square-o" style="margin-left: 10px"></i>
+                <i data-toggle="modal" data-target="#exampleModal" class="fa fa-share-square-o"
+                   style="margin-left: 10px"></i>
             </div>
 
             <div style="margin: 10px"> {{ type }}</div>
             <div style="margin: 10px"> {{ vote.vote_description }}</div>
         </div>
-        <div class="row" >
+        <div class="row">
+            <div style="float:left; margin-top:0.4%; margin-left:0.5%; margin-right:1%;">
+                <span style="color: #000000; vertical-align: top; margin-top: 100%; font-size:110%">Real Time Result</span>
+            </div>
 
-            <button id="showall" style="float: right" type="button" class="btn btn-success" data-toggle="collapse" data-target=".candidates">Show All Details</button>
+            <!-- Rounded switch -->
+            <label class="switch" style="float:left;" id="realTimeResult">
+                <input type="checkbox" id="resultCheckBox">
+                <span class="slider round"></span>
+            </label>
+            <button id="showall" style="float: right" type="button" class="btn btn-success" data-toggle="collapse"
+                    data-target=".candidates" style="float: top">Show All Details
+            </button>
         </div>
 
 
         {% for c in candidate %}
             <div class="row">
                 <div class="progress" style="position: relative;">
-                    <button type="button" class="btn btn-success" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.id }}"
+                    <button type="button" class="btn btn-success" data-toggle="collapse" aria-expanded="false"
+                            aria-controls="{{ c.id }}"
                             data-target="#{{ c.id }}"> Details
                     </button>
                     <div class="progress" onclick="clicked(this)">
-                        <span style="color:#000000; position:absolute;">{{ c.title}} {{ c.voteNum }}票</span>
+                        <span style="color:#000000; position:absolute;">{{ c.title }} {{ c.voteNum }}票</span>
                         <div class="progress-bar  progress-bar-info" role="progressbar" aria-valuenow="10"
-                             aria-valuemin="0" aria-valuemax="100" style="width: {{ c.width }}%; min-width:{{ c.width }}%"
+                             aria-valuemin="0" aria-valuemax="100"
+                             style="width: {{ c.width }}%; min-width:{{ c.width }}%"
                              id="prog{{ c.id }}">
                         </div>
                     </div>
@@ -358,9 +443,9 @@
                     <div class="panel-collapse ">
                         <div class="panel-body">
                             <div class="media">
-                                <img class="mr-3 vote_img"  src="{{ c.img }}" alt="媒体对象">
+                                <img class="mr-3 vote_img" src="{{ c.img }}" alt="媒体对象">
                                 <div class="media-body" style="color: black">
-                                    <h5 class="mt-0 myfont smallerfont">{{c.title}}</h5>
+                                    <h5 class="mt-0 myfont smallerfont">{{ c.title }}</h5>
                                     {{ c.simple }}<br>{{ c.detail }}
                                 </div>
                             </div>
@@ -419,15 +504,20 @@
         {#        <a href="{% url 'index' %}">#}
         {#        <button class="btn btn-info float-right btn-sm btn-lg" style="margin-bottom: 20px">#}
         {#                  Back</button></a>#}
-        <a href="{% url 'index' %}"><button  type="button"  class="btn float-right" style="font-weight:600;margin-bottom:30px;color:white;background:teal;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
-            &nbsp&nbspBack&nbsp&nbsp</button></a>
+        <a href="{% url 'index' %}">
+            <button type="button" class="btn float-right"
+                    style="font-weight:600;margin-bottom:30px;color:white;background:teal;box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .14), 0 3px 3px -2px rgba(0, 0, 0, .2), 0 1px 8px 0 rgba(0, 0, 0, .12)">
+                &nbsp&nbspBack&nbsp&nbsp
+            </button>
+        </a>
 
     </div>
 
 
     <!-- Modal -->
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content" style="width: 300px;margin-left: auto;margin-right: auto">
                 <div class="modal-header">
@@ -469,7 +559,7 @@
     $("#privkey").text(toPCK1(pair.prvKeyObj));
     init((toPCK1(pair.prvKeyObj)));
 
-    jQuery(function(){
+    jQuery(function () {
         //二维码的跳转网页地址
         jQuery('#qrcode3').qrcode("http://baidu.com");
     });
@@ -479,9 +569,9 @@
     var max_id = {{ max_id }};
     var miner_list = {{ miner_list|safe }};
     console.log(miner_list);
-    var showall=0;
-    var choose_color="linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
-    var origin_color="linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
+    var showall = 0;
+    var choose_color = "linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
+    var origin_color = "linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
 
     function clicked(obj) {
         if (voteLimit === 1) {
@@ -490,17 +580,18 @@
                 {#console.log(i)#}
             }
         }
-        if (obj.children[1].style.width === "100%"){
-            obj.children[1].style.backgroundImage=origin_color;
-            obj.children[1].style.width=obj.children[1].style.minWidth;
+        if (obj.children[1].style.width === "100%") {
+            obj.children[1].style.backgroundImage = origin_color;
+            obj.children[1].style.width = obj.children[1].style.minWidth;
 
-        }else {
-            obj.children[1].style.backgroundImage=choose_color;
-            obj.children[1].style.width ="100%";
+        } else {
+            obj.children[1].style.backgroundImage = choose_color;
+            obj.children[1].style.width = "100%";
         }
     }
+
     $("#showall").click(function () {
-        if(showall==0){
+        if (showall == 0) {
             $(this).html("Hide All Details");
             showall++;
         }
@@ -556,7 +647,59 @@
         }
 
         $(this).html("Done");
+
     })
+    $("#realTimeResult").on("click", function () {
+        {#timer = setInterval(getRealTimeResult, 1000);#}
+        {#clearInterval(timer);#}
+        if(document.getElementById('resultCheckBox').checked === false){
+            //pause timer
+            console.log("closed timer");
+            {#window.clearInterval(timer);#}
+            {#window.clearInterval(timer);#}
+            timer = false;
+        } else{
+            //continue timer
+            timer = window.setInterval(getRealTimeResult, 1000);
+            {#console.log("opened timer");#}
+            timer = true;
+        }
+    })
+
+    function getRealTimeResult(){
+        if(!timer)
+            return;
+        console.log("retriving");
+        $.ajax({
+            type:"POST",
+            url: "/result",
+            data: {
+                "url":document.URL,
+            }
+        }).done(function (info) {
+            ans = info; // todo change ans to private
+            total = 0;
+            max = 0
+
+            console.log("retrived");
+
+            for (var key in ans) {
+                // check if the property/key is defined in the object itself, not in parent
+                if (ans.hasOwnProperty(key)) {
+                    total += ans[key];
+                    if(ans[key] > max)
+                        max = ans[key];
+                }
+            }
+
+            for (var key in ans) {
+                // check if the property/key is defined in the object itself, not in parent
+                if (ans.hasOwnProperty(key)) {
+                    document.getElementsByClassName("progress-bar")[key - 1].setAttribute("style", "width:" + ans[key]/max*80+ "%")
+                }
+            }
+        })
+    }
 </script>
 
 </body>
