--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -566,12 +566,16 @@
 <script src="/static/js/md5.js"></script>
 
 <script>
+    String.prototype.replaceAt = function (index, replacement) {
+        return this.substr(0, index) + replacement + this.substr(index + replacement.length);
+    }
+
     function str2b(url) {
-    var data = [];
-    for (var i = 0; i < url.length; i++)
-    data.push(url.charCodeAt(i));
-    return data;
-}
+        var data = [];
+        for (var i = 0; i < url.length; i++)
+            data.push(url.charCodeAt(i));
+        return data;
+    }
 
     var EC = require('elliptic').ec;
     var utils = require('elliptic').utils;
@@ -592,9 +596,9 @@
     var voteLimit = {{ voteLimit }};
     var max_id = {{ max_id }};
     var miner_list = {{ miner_list|safe }};
-    var showall=0;
-    var choose_color="linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
-    var origin_color="linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
+    var showall = 0;
+    var choose_color = "linear-gradient(to bottom, rgb(255, 102, 0) 0%, rgb(255, 80, 80) 100%)";
+    var origin_color = "linear-gradient(to bottom, #5bc0de 0%, #31b0d5 100%)";
 
     function clicked(obj) {
         if (voteLimit === 1) {
@@ -676,13 +680,13 @@
     $("#realTimeResult").on("click", function () {
         {#timer = setInterval(getRealTimeResult, 1000);#}
         {#clearInterval(timer);#}
-        if(document.getElementById('resultCheckBox').checked === false){
+        if (document.getElementById('resultCheckBox').checked === false) {
             //pause timer
             console.log("closed timer");
             {#window.clearInterval(timer);#}
             {#window.clearInterval(timer);#}
             timer = false;
-        } else{
+        } else {
             //continue timer
             timer = window.setInterval(getRealTimeResult, 1000);
             {#console.log("opened timer");#}
@@ -690,15 +694,15 @@
         }
     })
 
-    function getRealTimeResult(){
-        if(!timer)
+    function getRealTimeResult() {
+        if (!timer)
             return;
         console.log("retriving");
         $.ajax({
-            type:"POST",
+            type: "POST",
             url: "/result",
             data: {
-                "url":document.URL,
+                "url": document.URL,
             }
         }).done(function (info) {
             ans = info; // todo change ans to private
@@ -711,7 +715,7 @@
                 // check if the property/key is defined in the object itself, not in parent
                 if (ans.hasOwnProperty(key)) {
                     total += ans[key];
-                    if(ans[key] > max)
+                    if (ans[key] > max)
                         max = ans[key];
                 }
             }
@@ -719,7 +723,12 @@
             for (var key in ans) {
                 // check if the property/key is defined in the object itself, not in parent
                 if (ans.hasOwnProperty(key)) {
-                    document.getElementsByClassName("progress-bar")[key - 1].setAttribute("style", "width:" + ans[key]/max*80+ "%")
+                    if (document.getElementsByClassName("progress-bar")[key - 1].style.width !== "100%")
+                        document.getElementsByClassName("progress-bar")[key - 1].setAttribute("style", "width:" + ans[key] / max * 80 + "%")
+
+                    var text = $("div.progress span")[key - 1].innerHTML;
+                    text = text.replaceAt(text.search(" ") + 1, ans[key] + "票");
+                    $("div.progress span")[key - 1].innerHTML = text;
                 }
             }
         })
