--- a/startvote/templates/card.html
+++ b/startvote/templates/card.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 
@@ -21,7 +19,8 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <!-- skin -->
-    <link rel="stylesheet" href="/static/skin/default.css"><script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="/static/skin/default.css">
+    <script src="/static/js/jquery-1.11.1.min.js"></script>
 
     <!------ Include the above in your HEAD tag ---------->
 
