--- a/startvote/templates/form.html
+++ b/startvote/templates/form.html
@@ -10,12 +10,12 @@
     <meta http-equiv="Expires" content="0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="/static/css/bootstrap-3.1.0.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="/static/js/bootstrap-3.1.0.min.js"></script>
+    <script src="static/js/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap-3.3.7.min.css">
+    <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <script src="static/js/bootstrap-3.3.7.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery.qrcode.min.js"></script>
 
     {#    <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>#}
