--- a/startvote/templates/signup.html
+++ b/startvote/templates/signup.html
@@ -5,10 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Signup BlockVote</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="/static/css/bootstrap-3.3.7.min.css">
+<link rel="stylesheet" href="/static/css/font-awesome-4.7.0.min.css">
+<script src="/static/js/jquery-1.12.4.min.js"></script>
+<script src="/static/js/bootstrap-3.3.7.min.js"></script>
+
 <style type="text/css">
 	body {
 		color: #fff;
