--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -15,10 +15,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/isotope.css" media="screen"/>
     <link rel="stylesheet" href="/static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen"/>
     <!-- skin -->
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
+    <script src="/static/js/jquery-1.11.1.min.js"></script>
+    <script src="/static/js/popper.min.js"></script>
 {#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"#}
 {#            integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"#}
 {#            crossorigin="anonymous"></script>#}
@@ -28,7 +26,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/skin/default.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>
+    <script src="/static/js/socket.io.dev.js"></script>
     <script src="/static/js/jquery-1.10.2.min.js"></script>
 {#        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>#}
 
