--- a/startvote/templates/share.html
+++ b/startvote/templates/share.html
@@ -12,10 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/static/css/bootstrap-3.1.0.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="/static/js/bootstrap-3.1.0.min.js"></script>
-    <script src="static/js/jquery-1.11.1.min.js"></script>
+    <script src="/static/js/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="/static/css/bootstrap-3.3.7.min.css">
     <script src="/static/js/jquery-2.1.1.min.js"></script>
-    <script src="static/js/bootstrap-3.3.7.min.js"></script>
+    <script src="/static/js/bootstrap-3.3.7.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery.qrcode.min.js"></script>
 
     {#    <script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>#}
