--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -640,7 +640,7 @@
             }
         }
         console.log(id);
-        if (id === undefined) {
+        if (cnt===0) {
             alert("You need to select at least one option.");
             return;
         }
