--- a/startvote/templates/vote.html
+++ b/startvote/templates/vote.html
@@ -210,6 +210,12 @@
             margin-left: 0px;
             margin-right: 0px;
         }
+        .row2 {
+            margin-top: 0px;
+            margin-bottom: 0px;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
 
         .progress {
         {#margin-top: 20px;#} height: 40px;
@@ -313,6 +319,7 @@
             }
 
 
+
         .switch {
             position: relative;
             display: inline-block;
@@ -371,7 +378,7 @@
 
         .slider.round:before {
             border-radius: 50%;
-        }
+        }}
 
     </style>
 
@@ -393,18 +400,17 @@
             <div style="margin: 10px"> {{ vote.vote_description }}</div>
         </div>
         <div class="row">
-            <div style="float:left; margin-top:0.4%; margin-left:0.5%; margin-right:1%;">
-                <span style="color: #000000; vertical-align: top; margin-top: 100%; font-size:110%">Real Time Result</span>
+            <div id="realTimeResult" style="float:right; margin-top:0.4%; margin-left:0.5%; margin-right:1%;">
+                <span style="font-weight: 700;color: #000000; vertical-align: top; margin-top: 100%; font-size:110%">Real Time Result</span>
+                <input type="checkbox" id="resultCheckBox">
             </div>
 
-            <!-- Rounded switch -->
-            <label class="switch" style="float:left;" id="realTimeResult">
-                <input type="checkbox" id="resultCheckBox">
-                <span class="slider round"></span>
-            </label>
-            <button id="showall" style="float: right" type="button" class="btn btn-success" data-toggle="collapse"
+        </div>
+        <div class="row row2">
+             <div><button id="showall" style="float: right" type="button" class="btn btn-success" data-toggle="collapse"
                     data-target=".candidates" style="float: top">Show All Details
-            </button>
+            </button></div>
+
         </div>
 
 
@@ -456,14 +462,7 @@
             <p class="center-block">
                 <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button"
                    aria-expanded="false" aria-controls="multiCollapseExample1">Public Key</a>
-                <button class="btn btn-primary" type="button" data-toggle="collapse"
-                        data-target="#multiCollapseExample2" aria-expanded="false"
-                        aria-controls="multiCollapseExample2">Private Key
-                </button>
-                <button class="btn btn-primary" type="button" data-toggle="collapse"
-                        data-target="#multiCollapseExample3" aria-expanded="false"
-                        aria-controls="multiCollapseExample3">Fake Public Key
-                </button>
+
             </p>
             <div class="col" style="color: #000000">
                 <div class="collapse multi-collapse" id="multiCollapseExample1">
@@ -483,6 +482,10 @@
                     </div>
                 </div>
             </div>
+            <button style="margin-top: 10px" class="btn btn-primary" type="button"  data-toggle="collapse"
+                        data-target="#multiCollapseExample3" aria-expanded="false"
+                        aria-controls="multiCollapseExample3">Blind Public Key
+                </button>
             <div class="col" style="color: #000;">
                 <div class="collapse multi-collapse" id="multiCollapseExample3">
                     <div class="card card-body">
