--- a/startvote/templates/fold_demo.html
+++ b/startvote/templates/fold_demo.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+<a hidden="hidden" id="Web_pub">{{ Web_pub }}</a>
 <div class="panel-group" id="accordion">
     <form action="{% url 'fold_demo' %}" method="post">
         {% csrf_token %}
@@ -35,6 +36,7 @@
 </div>
 <script src="../static/js/elliptic/lib/bundle.js"></script>
 <script src="../static/js/md5.js"></script>
+<script src="../static/js/jsrsasign-all-min.js"></script>
 <script>
     function str2b(url) {
     var data = [];
@@ -42,37 +44,108 @@
     data.push(url.charCodeAt(i));
     return data;
 }
+function hexToBytes(hex) {
+    for (var bytes = [], c = 0; c < hex.length; c += 2)
+    bytes.push(parseInt(hex.substr(c, 2), 16));
+    return bytes;
+}
+function bytesToHex(bytes) {
+    for (var hex = [], i = 0; i < bytes.length; i++) {
+        hex.push((bytes[i] >>> 4).toString(16));
+        hex.push((bytes[i] & 0xF).toString(16));
+    }
+    return hex.join("");
+}
+function len32(bytes) {
+    if (bytes.length >= 32)
+        return bytes.slice(0,32);
+    var prefix = Array(32-bytes.length).fill(0);
+    return prefix.concat(bytes);
+}
+function generateFakePublikey(Web_pub, my_pub) {
+    {#gama = Math.ceil(Math.random()*0xFFFFFFFF);#}
+    {#delta = Math.ceil(Math.random()*0xFFFFFFFF);#}
+    gama = 2;
+    delta = 3;
+    r = 1;
+    BNpub = new BN(Web_pub, 16);
+    P = (ec.keyFromPublic(BNpub.toArray())).getPublic();
+    d = key.getPrivate();
+    n = ec.n;
+    G = ec.g;
+    R = G.mul(r);
+    A = (R.add(G.mul(gama))).add(P.mul(delta));
+    t = A.x.mod(n);
+    console.log("t:", t.toString(16));
+    Bpub = new BN(my_pub);
+    console.log("mypub:", Bpub.toString(16));
+    hasher = ec.hash();
+    hasher.update(Bpub.toString(16)+t.toString(16));
+    hashc = hasher.digest();
+    console.log((new BN(hashc)).toString(16));
+    c = (new BN(hashc)).mod(n);
+    console.log(c.toString(16));
+    var faker = (c.sub(new BN(delta))).mod(n).toString(16);
+    console.log(faker);
+    return faker;
+}
+function getRealSig(fake_sig) {
+    BNfake = new BN(hexToBytes(fake_sig), 16);
+    console.log(BNfake.toString(16));
+    return (BNfake.add(new BN(gama))).mod(n);
+}
+    console.log("web_pub", $("#Web_pub").text());
     $("#Submit").on('click', function () {
         var prv = $("#prv").val();
         var msg = $("#msg").val();
-        var EC = require('elliptic').ec;
-        var EdDSA = require('elliptic').eddsa;
-        var utils = require('elliptic').utils;
-        var ec = new EC('secp256k1');
-        {#ec.keyFromPrivate(hex_md5(prv));#}
-        var key = ec.keyFromPrivate(hex_md5(prv));
+        EC = require('elliptic').ec;
+        utils = require('elliptic').utils;
+        BN = utils.jbN();
+        ec = new EC('secp256k1');
+        key = ec.keyFromPrivate(hex_md5("Mark111"));
         var pub = key.getPublic();
-        console.log(pub);
-        var sig = ec.sign(str2b(msg), key);
-        var signature = utils.toHex(sig.toDER());
-        console.log(signature);
         var key_pub = [4].concat(pub.x.toArray('big', 32), pub.y.toArray('big', 32));
-        console.log(key_pub);
+        var fake_pub = generateFakePublikey($("#Web_pub").text(), key_pub);
+        {#var sig = ec.sign(str2b(msg), key);#}
+        {#var signature = utils.toHex(sig.toDER());#}
         $.post(
            "fold_demo",
             {
-                msg: msg,
-                signature: signature,
-                pub_key: utils.toHex(key_pub),
-                pri_key: prv
+                pub_key: fake_pub
             },
             function(data){
-               console.log(data);
+               console.log("fake:", data);
+               var real_sig = getRealSig(data);
+               console.log("real:", real_sig.toString(16));
+               $.post("fold_demo",{
+                   m: Bpub.toString(16),
+                   c: c.toString(16),
+                   s: real_sig.toString(16)
+               });
             }
         );
-        console.log(hex_md5(prv));
-        {#console.log(utils.toHex(key.getPrivate()));#}
-        console.log(ec.verify(str2b(msg), sig, pub));
+        {#var hasher = ec.hash();#}
+        {#gama = 80;#}
+        {#delta = 99;#}
+        {#r = 1;#}
+        {#P = pub;#}
+        {#console.log(utils.toHex(P.x.toArray()));#}
+        {#d = key.getPrivate();#}
+        {#n = ec.n;#}
+        {#G = ec.g;#}
+        {#R = G.mul(r);#}
+        {#console.log(R);#}
+        {#A = (R.add(G.mul(gama))).add(P.mul(delta));#}
+        {#console.log(A);#}
+        {#t = A.x.mod(n);#}
+        {#bpub = new BN(key_pub);#}
+        {##}
+        {#hasher.update(t.toString(16)+bpub.toString(16));#}
+        {#c = new BN(hasher.digest());#}
+        {#console.log(c.toString(16));#}
+        {#c = c.umod(n);#}
+        {#console.log(c.toString(16));#}
+        {#console.log(ec.verify(str2b(msg), sig, pub));#}
         $(this).html("Done");
     });
 </script>
